--- a/openbox/dark/usr/share/themes/ManjaroFlatDark/gtk-3.0/gtk.css
+++ b/openbox/dark/usr/share/themes/ManjaroFlatDark/gtk-3.0/gtk.css
@@ -2,8 +2,8 @@
 /* Default color scheme */
 @define-color base_color #131313;
 @define-color bg_color #090909;
-@define-color text_color #C2C2C2;
-@define-color fg_color #BDBDBD;
+@define-color text_color #a7a7a7;
+@define-color fg_color #a7a7a7;
 @define-color selected_bg_color #131313;
 @define-color selected_fg_color #8CBC65;
 @define-color tooltip_bg_color #040404;
